crates/meilisearch/tests/dynamic_search_rules/snapshots/mod.rs/create_and_get/get_rule_1.snap
---
source: crates/meilisearch/tests/dynamic_search_rules/mod.rs
---
{
  "uid": "rule-1",
  "active": true,
  "conditions": {},
  "actions": [
    {
      "selector": {
        "id": "42"
      },
      "action": {
        "type": "pin",
        "position": 1
      }
    }
  ]
}
